# llm-agents

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: smoke.yml
config/: agent.json  ollama.json
docs/: COMPARISON_REPORT.md  CONFIG.md  FRAMEWORK_MATRIX.md  INSTALL_TOOLCHAIN.md  NEXT_TASKS.md  PROJECT_STATUS.md  benchmarks.md
docs/per-framework/: ag2.md  crewai.md  dotnet-sk.md  dspy.md  haystack.md  (+8 more)
dotnet/: README.md  llm-agents.sln  nuget.config
java/: README.md  settings.xml
python/: README.md  constraints-otel.txt  pyproject.toml  requirements-lock.txt  requirements.txt
python/ag2/: README.md  crew_research.py  main.py
python/crewai/: README.md  crew_research.py  main.py
python/dspy/: README.md  main.py
python/haystack/: README.md  main.py
python/langgraph/: HITL.md  README.md  checkpoint_demo.py  crew_research.py  hitl_demo.py  main.py
python/llamaindex/: README.md  main.py
python/llm_agents_common/: __init__.py  config.py  mock_search.py  output.py  search.py  validate.py
python/maf/: README.md  crew_research.py  main.py
python/pydantic_ai/: README.md  main.py
python/scripts/: install-all.ps1  validate_stdout.py
python/smolagents/: README.md  main.py
scripts/: bootstrap.ps1  check-ollama.ps1  install-toolchain.ps1  pull-models.ps1  run-all-smoke.ps1  run-smoke-live.ps1  run-ts-smoke.ps1  setup-ollama.ps1  update-matrix-from-smoke.ps1  verify-toolchain.ps1  wait-and-smoke.ps1
shared/: TASK_SPEC.md
tests/: test_config.py  test_mock_search.py
typescript/: README.md  package-lock.json  package.json
(+26 files in other folders)
